--- a/themes/PaperMod/layouts/partials/toc.html
+++ b/themes/PaperMod/layouts/partials/toc.html
@@ -4,7 +4,8 @@
 <div class="toc">
     <details {{if (.Param "TocOpen") }} open{{ end }}>
         <summary accesskey="c" title="(Alt + C)">
-            <span class="details">{{- i18n "toc" | default "Table of Contents" }}</span>
+            <!-- <span class="details">{{- i18n "toc" | default "Table of Contents" }}</span> -->
+            <span class="details">Inhaltsverzeichnis</span>
         </summary>
 
         <div class="inner">
